src/test/ui/error-codes/E0603.stderr
error[E0603]: constant `PRIVATE` is private
  --> $DIR/E0603.rs:16:5
   |
16 |     SomeModule::PRIVATE; //~ ERROR E0603
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0603"
